@@ -919,14 +919,15 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"setToCConverterActiveStatus", do_setToCConverterActiveStatus, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"removeToCConverterActiveStatus", do_setToCConverterActiveStatus, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
 
-    {"lockEnvironment", do_lockEnv, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"lockEnvironment", do_lockEnv, 0, 111, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"environmentIsLocked", do_envIsLocked, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
-    {"lockBinding", do_lockBnd, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
-    {"unlockBinding", do_lockBnd, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"lockBinding", do_lockBnd, 0, 111, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"unlockBinding", do_lockBnd, 1, 111, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"bindingIsLocked", do_bndIsLocked, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
-    {"makeActiveBinding", do_mkActiveBnd, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
+    {"makeActiveBinding", do_mkActiveBnd, 0, 111, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"bindingIsActive", do_bndIsActive, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
-    {"mkUnbound", do_mkUnbound, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
+    /* looks like mkUnbound is unused in base R */
+    {"mkUnbound", do_mkUnbound, 0, 111, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"isNamespaceEnv", do_isNSEnv, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"registerNamespace", do_regNS, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"unregisterNamespace", do_unregNS, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
